--- a/widget/gt_widget.ini
+++ b/widget/gt_widget.ini
@@ -1,9 +1,9 @@
-#STANDARD wxWidget
+#My wxWidget
 
 [Default]
 import = wx
 name = wxWidget
-icons = wx_widget
+icons = gt_widget
 
 [Button]
 type = text, image
