--- a/publics/syntax.ini
+++ b/publics/syntax.ini
@@ -1,23 +1,23 @@
 #Default like NetBeans
 [Windows]
     time = Times New Roman
-    mono = monospace
+    mono = Monospace
     helv = Helvetica
-    other = Courier New
+    cour = Courier New
     little = 7
-    normal = 9
+    normal = 8
     large = 9
 [Other]
     time = Times
     mono = Mono
     helv = Helvetica
-    other = new century schoolbook
+    cour = new century schoolbook
     little = 8
     normal = 9
     large = 10
 [Python]
     [[Default]]
-        font = mono
+        font = cour
         size = normal
         back = '#FFFFFF'
         color = '#000000'
@@ -26,7 +26,6 @@
         size = little
         back = '#E9E8E2'
     [[CONTROLCHAR]]
-        font = mono
     [[BRACELIGHT]]
         back = '#0000FF'
         color = '#FFFFFF'
