--- a/publics/projects.ini
+++ b/publics/projects.ini
@@ -1,23 +1,12 @@
-[MyProject 0]
-last = False
-lang = python
-show_hidden = False
-path = C:\Users\Giuseppe Tripoli\Devel\Python\wxPyFw
-
-[MyProject 1]
+[wxPyFw]
 last = True
 lang = python
 show_hidden = False
 path = C:\Users\Giuseppe Tripoli\Devel\Python\wxPyFw
 
-[MyProject 2]
-last = False
-lang = python
-show_hidden = False
-path = C:\Users\Giuseppe Tripoli\Devel\Python\wxPyFw
 
-[MyProject 3]
+[TEST]
 last = False
 lang = python
 show_hidden = False
-path = C:\Users\Giuseppe Tripoli\Devel\Python\wxPyFw
+path = C:\Users\Giuseppe Tripoli\Devel\Python\TESTwxPyFwTEST
