--- a/publics/syntax.ini
+++ b/publics/syntax.ini
@@ -4,6 +4,7 @@
     mono = Monospace
     helv = Helvetica
     cour = Courier New
+    tabsize = 4
     little = 7
     normal = 8
     large = 9
@@ -27,10 +28,8 @@
         back = '#E9E8E2'
     [[CONTROLCHAR]]
     [[BRACELIGHT]]
-        back = '#0000FF'
-        color = '#FFFFFF'
+        back = '#a3b2cc'
         weight = bold
-
     [[BRACEBAD]]
         color = '#000000'
         weight = bold
