--- a/publics/projects.ini
+++ b/publics/projects.ini
@@ -1,12 +1,5 @@
 [wxPyFw]
-last = True
+main = True
 lang = python
-show_hidden = False
+hidden = False
 path = C:\Users\Giuseppe Tripoli\Devel\Python\wxPyFw
-
-
-[TEST]
-last = False
-lang = python
-show_hidden = False
-path = C:\Users\Giuseppe Tripoli\Devel\Python\TESTwxPyFwTEST
