--- a/publics/projects.ini
+++ b/publics/projects.ini
@@ -1,5 +1,6 @@
-[wxPyFw]
+[GTWidget]
 main = True
 lang = python
 hidden = False
-path = C:\Users\Giuseppe Tripoli\Devel\Python\wxPyFw
+path = C:\Users\Giuseppe Tripoli\Devel\Python\GTWidget
+init = C:\Users\Giuseppe Tripoli\Devel\Python\GTWidget\GTWidget.py
