--- a/publics/syntax.ini
+++ b/publics/syntax.ini
@@ -16,8 +16,8 @@
     little = 8
     normal = 9
     large = 10
-[Python]
-    [[Default]]
+[DEFAULT]
+    [[DEFAULT]]
         font = cour
         size = normal
         back = '#FFFFFF'
@@ -34,13 +34,20 @@
         color = '#000000'
         weight = bold
 
-    [[COMMENTLINE]]         #Linee commentate
+[Python]
+    [[DEFAULT]]
+        font = cour
+        size = normal
+        back = '#FFFFFF'
+        color = '#000000'
+        weight = normal
+    [[COMMENTLINE]]
         color = '#969696'
     [[NUMBER]]
         color = '#007F7F'
     [[STRING]]
         color = '#CE7B00'
-    [[CHARACTER]]           #variabili tra ' '
+    [[CHARACTER]]
         color = '#7F007F'
     [[WORD]]
         color = '#0000E6'
@@ -63,3 +70,32 @@
         color = '#969696'
     [[STRINGEOL]]
         color = '#7F0000'
+[XML]
+    [[DEFAULT]]
+        font = cour
+        size = normal
+        back = '#FFFFFF'
+        color = '#000000'
+        weight = normal
+    [[COMMENT]]
+        weight = italic
+        color = '#BBBBBB'
+    [[NUMBER]]
+        color = '#007F7F'
+    [[SINGLESTRING]]
+        color = '#00AA00'
+    [[DOUBLESTRING]]
+        color = '#00AA00'
+    [[XMLSTART]]
+        color = '#880088'
+    [[XMLEND]]
+        color = '#880088'
+    [[TAG]]
+        color = '#0044FF'
+    [[TAGEND]]
+        color = '#0044FF'
+        weight = bold
+    [[ATTRIBUTE]]
+        color = '#AA00AA'
+    [[CDATA]]
+        color = '#FF0000'
